# algorithm-exercises-c

./: .gitignore  CMakeLists.txt  Dockerfile  Environment-Notes.md  Makefile  README.md  compose.yaml  sonar-project.properties  vcpkg.json
.github/: dependabot.yml
.github/workflows/: c-coverage.yml  c-linux.yml  c-macos.yml  c-windows.yml  c.yml  clang-format.yml  codeql.yml  cppcheck.yml  docker-image.yml  gitleaks.yml  make-coverage-html.yml  sonarcloud.yml
docs/: Environment-Notes.md
src/lib/exercises/: CMakeLists.txt
src/lib/exercises/include/exercises/basic/: limits.h
src/lib/exercises/include/exercises/hackerrank/projecteuler/: euler001.h  euler002.h  euler003.h
src/lib/exercises/include/exercises/hackerrank/warmup/: a_very_big_sum.h  birthday_cake_candles.h  compare_triplets.h  diagonal_difference.h  mini_max_sum.h  plus_minus.h  simple_array_sum.h  solve_me_first.h  staircase.h  time_conversion.h
src/lib/exercises/src/basic/: limits.c
src/lib/exercises/src/hackerrank/projecteuler/: euler001.c  euler002.c  euler003.c
src/lib/exercises/src/hackerrank/warmup/: a_very_big_sum.c  birthday_cake_candles.c  compare_triplets.c  diagonal_difference.c  mini_max_sum.c  plus_minus.c  simple_array_sum.c  solve_me_first.c  staircase.c  time_conversion.c
src/tests/: CMakeLists.txt
src/tests/tools/: memory_injector.cpp  memory_injector.hpp
src/tests/unit/lib/basic/: limits.test.cpp
src/tests/unit/lib/hackerrank/projecteuler/: euler001.test.cpp  euler001.testcases.json  euler002.test.cpp  euler003.test.cpp
src/tests/unit/lib/hackerrank/warmup/: a_very_big_sum.test.cpp  birthday_cake_candles.test.cpp  compare_triplets.test.cpp  compare_triplets.testcases.json  diagonal_difference.test.cpp  mini_max_sum.test.cpp  plus_minus.test.cpp  simple_array_sum.test.cpp  solve_me_first.test.cpp  staircase.test.cpp  time_conversion.test.cpp  time_conversion.testcases.json
